--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h3 {
   width: 100%;
 }
 
-.btn:hover{
+.btn:hover {
   background-color: #e44f21;
 }
 
@@ -150,7 +150,7 @@ h3 {
 /* office */
 
 .office {
-  margin: 10rem 0;
+  margin: 5rem 0;
 }
 
 .office__cart {
@@ -209,10 +209,7 @@ h3 {
 }
 
 .about__social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 1rem 0;
+  display: none;
 }
 
 .about__container--all {
@@ -332,6 +329,10 @@ textarea {
   }
 
   .about__social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
     grid-area: social;
     margin-right: auto;
   }
@@ -352,7 +353,7 @@ textarea {
 }
 
 .footer__container {
-  padding: 4rem 2rem;
+  padding: 2rem;
 }
 
 .footer__description {
@@ -406,7 +407,7 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 4rem 0;
+  padding-top: 4rem;
 }
 
 .footer__icon {
@@ -450,7 +451,7 @@ textarea {
 }
 .navbar__logo,
 .navbar__icon {
-  padding: 1rem;
+  padding: 1rem 1.5rem;
 }
 .navbar__menu {
   display: none;
@@ -575,7 +576,7 @@ textarea {
   color: var(--color-heading);
 }
 
-.intro__button:hover{
+.intro__button:hover {
   background-color: var(--color-body-light);
   color: #a7a7a7;
 }
@@ -590,13 +591,15 @@ textarea {
   color: #cacaca;
 }
 
-.intro__button,.intro__button--dark{
+.intro__button,
+.intro__button--dark {
   display: inline-flex;
   align-items: center;
   justify-content: flex-start;
   font-size: 1.5rem;
 }
-.intro__button i,.intro__button--dark i{
+.intro__button i,
+.intro__button--dark i {
   font-size: 1.8rem;
   margin-left: 1rem;
   justify-self: flex-start;
@@ -647,7 +650,7 @@ textarea {
 /* Services */
 
 .services {
-  margin: 10rem 0;
+  margin-top: 5rem;
   width: 100%;
 }
 
@@ -737,7 +740,8 @@ textarea {
 /* travel */
 
 .travel {
-  padding: 8rem 2rem;
+  margin-top: 2rem;
+  padding: 0 2rem;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -903,11 +907,11 @@ textarea {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 2rem 0;
+  margin: 3rem 0;
 }
 
 .radio :not(:last-child) {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .radio__box {
